make_flib11_test_clang++.log
compile time:
Sat  2 Jun 22:38:31 CEST 2018

make --no-print-directory -C guiTextTest  CXX=clang++
make --no-print-directory -C pixy  CXX=clang++
make --no-print-directory -C fontSDF  CXX=clang++
make --no-print-directory -C thickLine  CXX=clang++
mkdir -p libL
mkdir -p libL
mkdir -p libL
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -I ../../include -c main.cpp -o libL/main.o 
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -I ../../include -c main.cpp -o libL/main.o 
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -I ../../include -c main.cpp -o libL/main.o 
mkdir -p libL
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -I ../../include -c PixyGame.cpp -o libL/PixyGame.o 
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -I ../../include -c SprEngine.cpp -o libL/SprEngine.o 
clang++ -s -L ../../libLinux -o guiTextTest libL/main.o -lf -lGL -lX11 -lpthread 
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -I ../../include -c PixyEngine.cpp -o libL/PixyEngine.o 
clang++ -s -L ../../libLinux -o thickLine libL/main.o -lf -lGL -lX11 -lpthread 
make --no-print-directory -C tetraRot  CXX=clang++
mkdir -p libL
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -I ../../include -c main.cpp -o libL/main.o 
clang++ -s -L ../../libLinux -o fontSDF libL/main.o -lf -lGL -lX11 -lpthread 
make --no-print-directory -C shaderTest  CXX=clang++
mkdir -p libL
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -I ../../include -c main.cpp -o libL/main.o 
make --no-print-directory -C mandelbrot  CXX=clang++
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -I ../../include -c main.cpp -o libL/main.o 
mkdir -p libL
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -I ../../include -c main.cpp -o libL/main.o 
clang++ -s -L ../../libLinux -o tetRot libL/main.o -lf -lGL -lX11 -lpthread 
make --no-print-directory -C computeShader  CXX=clang++
mkdir -p libL
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -I ../../include -c main.cpp -o libL/main.o 
clang++ -s -L ../../libLinux -o pixyTest libL/PixyGame.o libL/SprEngine.o libL/PixyEngine.o libL/main.o -lf -lGL -lX11 -lpthread 
clang++ -s -L ../../libLinux -o mandelbrot libL/main.o -lf -lGL -lX11 -lpthread 
make --no-print-directory -C hexTerrain  CXX=clang++
mkdir -p libL
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -I ../../include -c HexTerrain.cpp -o libL/HexTerrain.o 
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -I ../../include -c HexPlotter.cpp -o libL/HexPlotter.o 
clang++ -s -L ../../libLinux -o shaderTest libL/main.o -lf -lGL -lX11 -lpthread 
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -I ../../include -c main.cpp -o libL/main.o 
clang++ -s -L ../../libLinux -o compShader libL/main.o -lf -lGL -lX11 -lpthread 
make --no-print-directory -C treeMaker  CXX=clang++
mkdir -p libL
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -I ../../include -c main.cpp -o libL/main.o 
make --no-print-directory -C singleFile  CXX=clang++
make --no-print-directory -f ../../include/FRONTIER/Makefiles/fproject.mk F_CPP_FILES=testVectors.cpp EXEC=testVectors FPATH=../.. CXX=clang++
mkdir -p libL
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -I ../../include -c testVectors.cpp -o libL/testVectors.o 
make --no-print-directory -f ../../include/FRONTIER/Makefiles/fproject.mk F_CPP_FILES=testMatrices.cpp EXEC=testMatrices FPATH=../.. CXX=clang++
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -I ../../include -c testMatrices.cpp -o libL/testMatrices.o 
clang++ -s -L ../../libLinux -o hexTer libL/HexTerrain.o libL/HexPlotter.o libL/main.o -lf -lGL -lX11 -lpthread 
make --no-print-directory -f ../../include/FRONTIER/Makefiles/fproject.mk F_CPP_FILES=sdfFont.cpp EXEC=sdfFont FPATH=../.. CXX=clang++
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -I ../../include -c sdfFont.cpp -o libL/sdfFont.o 
testMatrices.cpp:57:15: error: ambiguous conversion for functional-style cast from 'const char [3]' to 'matrix<3, 3, string>'
        cout << sm + matrix<3,3,string>("_k") << endl << endl;
                     ^~~~~~~~~~~~~~~~~~~~~~~
../../include/FRONTIER/System/Matrix.hpp:76:3: note: candidate constructor
                matrix(const T &all);
                ^
../../include/FRONTIER/System/Matrix.hpp:116:3: note: candidate constructor
                matrix(fm::Delegate<T,vec2i> fun);
                ^
clang++ -s -L ../../libLinux -o treeMaker libL/main.o -lf -lGL -lX11 -lpthread 
1 error generated.
../../include/FRONTIER/Makefiles/fproject.mk:57: recipe for target 'libL/testMatrices.o' failed
make[2]: *** [libL/testMatrices.o] Error 1
makefile:24: recipe for target 'testMatrices' failed
make[1]: *** [testMatrices] Error 2
make[1]: *** Waiting for unfinished jobs....
make --no-print-directory -C spriteTest  CXX=clang++
mkdir -p libL
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -I ../../include -c main.cpp -o libL/main.o 
clang++ -s -L ../../libLinux -o testVectors libL/testVectors.o -lf -lGL -lX11 -lpthread 
make --no-print-directory -C guiLayout  CXX=clang++
mkdir -p libL
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -I ../../include -c ColorPicker.cpp -o libL/ColorPicker.o 
make --no-print-directory -C EditText  CXX=clang++
mkdir -p libL
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -I ../../include -c main.cpp -o libL/main.o 
clang++ -s -L ../../libLinux -o sdfFont libL/sdfFont.o -lf -lGL -lX11 -lpthread 
makefile:12: recipe for target 'singleFile' failed
make: [singleFile] Error 2 (ignored)
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -I ../../include -c main.cpp -o libL/main.o 
make --no-print-directory -C GLTest  CXX=clang++
mkdir -p libL
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -I ../../include -c main.cpp -o libL/main.o 
clang++ -s -L ../../libLinux -o spriteTest libL/main.o -lf -lGL -lX11 -lpthread 
make --no-print-directory -C kdTree  CXX=clang++
mkdir -p libL
clang++ -std=gnu++11 -pedantic -Werror -Wextra -Wall -DFRONTIER_DEBUG -O2 -I ../../include -c main.cpp -o libL/main.o 
clang++ -s -L ../../libLinux -o tetRot libL/main.o -lf -lGL -lX11 -lpthread 
libL/main.o: In function `fgui::GuiEditText::updateSprites()':
main.cpp:(.text+0x414): undefined reference to `fgui::SpritesFromText::SpritesFromText(std::vector<fg::SpriteBase<fg::Font::Identifier>, std::allocator<fg::SpriteBase<fg::Font::Identifier> > >&, fm::String const&, fg::Glyph::Style, fg::Font, unsigned int, fgui::TextAlign, fgui::TextWrap, fm::vector2<float>&, fm::vector2<float>, fm::vector4<float>, fm::vector2<float>)'
clang: error: linker command failed with exit code 1 (use -v to see invocation)
../../include/FRONTIER/Makefiles/fproject.mk:54: recipe for target 'tetRot' failed
make[1]: *** [tetRot] Error 1
makefile:12: recipe for target 'EditText' failed
make: [EditText] Error 2 (ignored)
clang++ -s -L ../../libLinux -o guiLayout libL/ColorPicker.o libL/main.o -lf -lGL -lX11 -lpthread 
clang++ -s -L ../../libLinux -o GLTest libL/main.o -lf -lGL -lX11 -lpthread 
clang++ -s -L ../../libLinux -o kdTree libL/main.o -lf -lGL -lX11 -lpthread 
